istio/ambient/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: httpbin
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin.org
          group: networking.istio.io
          kind: Hostname
          port: 80
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: httpbin
  labels:
    istio.io/use-waypoint: waypoint
spec:
  exportTo:
    - "*"
  hosts:
    - httpbin.org
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: DNS
# ---
# apiVersion: networking.istio.io/v1
# kind: WorkloadEntry
# metadata:
#   name: httpbin-we
# spec:
#   address: httpbin.org
#   labels:
#     app: httpbin-org
#   # ports:
#   #   http: 8000
# ---
# apiVersion: networking.istio.io/v1
# kind: ServiceEntry
# metadata:
#   name: httpbin
# spec:
#   exportTo:
#     - "*"
#   hosts:
#     - httpbin.org
#   location: MESH_EXTERNAL
#   ports:
#     - name: http
#       number: 80
#       protocol: HTTP
#   resolution: DNS
#   workloadSelector:
#     labels:
#       app: httpbin-org
